Thu Nov 15 15:13:00 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java: New isManifold() method.
	* src/org/jcae/mesh/amibe/util/QSortedTree.java: Generified.

Thu Nov 15 12:58:24 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java (discreteProject): Remove
	previous workaround and instead detect degenerated cases.

Thu Nov 15 01:45:26 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java (discreteProject): Current
	projection does not work if a vertex has four coplanar incident
	triangles.  We now detect coplanar triangles and keep vertex
	unmodified.

Wed Nov 14 11:27:10 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshExporter.java: Copy Amibe2VTK class
	into MeshExporter.
	* src/org/jcae/mesh/amibe/validation/QualityFloat.java: Compute
	min and max values in finish().  New getValueByPercent(),
	getMeanValue() and getStandardDeviation() methods.

Tue Nov 13 13:42:27 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Edge checks have
	been optimized yesterday, but insertion of triangle centroids can
	also be optimized to check only triangles which have been modified
	during previous iteration.  This improves performance for very
	large patches.
	* src/org/jcae/mesh/amibe/patch/VirtualHalfEdge2D.java (split3):
	Add an argument to collect the set of triangles which are modified
	by this method.  This method now returns the total number of edges
	swapped during processing, and 0 when vertex had not been inserted.
	This is useful for debug messages.
	* src/org/jcae/mesh/xmldata/MeshToMMesh3DConvert.java: Write <shape>
	element into jcae3d XML file, as in other jcae[12]d files.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Rename into
	* src/org/jcae/mesh/amibe/algos3d/QEMDecimateHalfEdge.java:  ...this