@@ -1,3 +1,9 @@
+Fri Nov 16 12:24:10 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Loop on vertices
+	and not triangles.  A vertex is moved only if mesh quality is
+	improved.
+
 Thu Nov 15 15:13:00 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/Vertex.java: New isManifold() method.
